Fixed message resources for Wavemaker Cloud and support for data deployment on wavemaker cloud deployment
Change-Id: Ib718d56f7a349141844c62db9c03df5e8d4af5b5

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -603,8 +603,8 @@ com.wavemaker.unAuthorized=User not authenticated
 com.wavemaker.userAlreadyLoggedOut_id=11055
 com.wavemaker.userAlreadyLoggedOut=User already logged out
 
-com.wavemaker.emptyCloudJeeAccountDetails_id=11056
-com.wavemaker.emptyCloudJeeAccountDetails=User CloudJee account details has an empty username or password
+com.wavemaker.emptyWavemakerCloudAccountDetails_id=11056
+com.wavemaker.emptyWavemakerCloudAccountDetails=User WaveMakerCloud account details has an empty username or password
 
 com.wavemaker.oldPasswordDoesNotMatch_id=11057
 com.wavemaker.oldPasswordDoesNotMatch=Old password does not match
@@ -642,11 +642,11 @@ com.wavemaker.core.failedToValidateUrl=Failed to validate url {0}
 com.wavemaker.tools.failedToDeleteProjectFiles_id=11068
 com.wavemaker.tools.failedToDeleteProjectFiles=Failed to delete project files for the project {0}
 
-com.wavemaker.tools.unAuthorizedToCloudJee_id=11069
-com.wavemaker.tools.unAuthorizedToCloudJee=Unauthorized to cloudJee,{0}
+com.wavemaker.tools.unAuthorizedToWavemakerCloud_id=11069
+com.wavemaker.tools.unAuthorizedToWavemakerCloud=Unauthorized to WaveMakerCloud,{0}
 
-com.wavemaker.tools.unexpectedCloudJeeResponse_id=11070
-com.wavemaker.tools.unexpectedCloudJeeResponse=Unexpected response from CloudJee,Response Code:{0},msg:{1}
+com.wavemaker.tools.unexpectedWavemakerCloudResponse_id=11070
+com.wavemaker.tools.unexpectedWavemakerCloudResponse=Unexpected response from WaveMakerCloud,Response Code:{0},msg:{1}
 
 com.wavemaker.saas.saasclientApplicationStartupTimedOut_id=11071
 com.wavemaker.saas.saasclientApplicationStartupTimedOut=SaaS Client Application failed to start
@@ -665,9 +665,6 @@ com.wavemaker.tools.failedToDeployApplication=Failed to deploy application {0}
 
 com.wavemaker.core.MaxApplicationsExceeded_id=11076
 com.wavemaker.core.MaxApplicationsExceeded=Maximum of (0} applications already deployed
-
-com.wavemaker.tools.AppContainerAllocationFailed_id=11077
-com.wavemaker.tools.AppContainerAllocationFailed=App Container Allocation Failed,Reason:{0}
 
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
