Introducing new service to delete studio prefabs.
Change-Id: Idd05794c2bcdb27dc1cfb59edb3f62aba742b005

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -315,6 +315,9 @@ com.wavemaker.tools$CouldNotExportEmptyDatabase=Export of empty database is not 
 com.wavemaker.tools$ProjectNameContainsSpecialCharacter_id=5039
 com.wavemaker.tools$ProjectNameContainsSpecialCharacter=Special Characters are not allowed in Project Name.
 
+com.wavemaker.tools$FailedToDeletePrefab_id=5040
+com.wavemaker.tools$FailedToDeletePrefab=Failed to delete prefab "{0}"
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
