While exporting and importing prefab,making prefab name consistent in prefab configuration.  Change-Id: I3130a3619bee156f05397c117be03b06218ca447
Change-Id: I7b50bc7aa98419eb1a10dc806c3459f06d72164f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -444,11 +444,20 @@ com.wavemaker.studio$ThemeAlreadyExistInStudio=Theme "{0}" already exist in stud
 com.wavemaker.studio$InvalidTheme_id=10007
 com.wavemaker.studio$InvalidTheme=Given theme file "{0}" is not a valid Theme
 
-com.wavemaker.studio$ThemeIsInactive_id=10007
+com.wavemaker.studio$ThemeIsInactive_id=10008
 com.wavemaker.studio$ThemeIsInactive=Given theme file "{0}" is not a valid Theme
 
-com.wavemaker.studio$FailedToLoadStudioProperties_id=10008
+com.wavemaker.studio$FailedToLoadStudioProperties_id=10009
 com.wavemaker.studio$FailedToLoadStudioProperties=Failed to load studio properties "{0}"
+
+com.wavemaker.studio$InvalidPrefab_id=10010
+com.wavemaker.studio$InvalidPrefab=Invalid prefab : Config file does exist at "{0}"
+
+com.wavemaker.studio$PrefabPropertyMissingInConfigFile_id=10011
+com.wavemaker.studio$PrefabPropertyMissingInConfigFile=Property "{0}" missing in prefab config file
+
+com.wavemaker.studio$ConfigurationException_id=10012
+com.wavemaker.studio$ConfigurationException=Configuration Exception,Please check logs.
 
 # com.wavemaker.json (11000-11999)
 com.wavemaker.json$FailedParsing_id=11000
