--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
+		<main.basedir>${basedir}/..</main.basedir>
 	</properties>
 
 	<dependencies>
