API changes for Security.
Change-Id: I9a9e320115219f258268a6ee96a2f2e7796f1dd9

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -349,6 +349,9 @@ com.wavemaker.tools$SampleDataBaseAlreadyExist=Sample Database already exist in 
 com.wavemaker.tools$UnableToFindForeignKeyColumn_id=6009
 com.wavemaker.tools$UnableToFindForeignKeyColumn=Unable to find foreign key column "{0}"
 
+com.wavemaker.tools$FailedToReadWriteInFile_id=6010
+com.wavemaker.tools$FailedToReadWriteInFile=Failed to read or write "{0}" file.
+
 
 # com.wavemaker.runtime misc (7000-7999)
 com.wavemaker.common.util$FileUtils_PathDNE_id=7000
