Changes in the code/DB after Maven Dependencies versions upgrades.
Change-Id: I5b657f5d1d7ea0cd7c06d567f337328e6006518d

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -249,9 +249,6 @@ com.wavemaker.tools$ValueCouldNotBeNULL=Value of the argument "{0}" could not be
 com.wavemaker.tools$IllegalArgumentValue_id=5017
 com.wavemaker.tools$IllegalArgumentValue=Value of the argument: "{0}" is illegal : "{1}"
 
-com.wavemaker.tools$FailedToUndeployProject_id=5018
-com.wavemaker.tools$FailedToUndeployProject=Failed to undeploy project "{0}"
-
 com.wavemaker.tools$InvalidSchema_id=5019
 com.wavemaker.tools$InvalidSchema=Not a valid schema
 
@@ -412,6 +409,10 @@ com.wavemaker.tools.data$TypeNotCreated=Type not created.
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
 com.wavemaker.tools.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
+
+com.wavemaker.tools.deployment$FailedToUndeployProject_id=9001
+com.wavemaker.tools.deployment$FailedToUndeployProject=Failed to undeploy project "{0}"
+
 
 # com.wavemaker.tools.cloudmgr (9501-9999)
 com.wavemaker.tools.cloudmgr$UnknownCloudServerMgr_id=9501
