Changes related to DataModel and LDAP Connection error message.
Change-Id: Ifa918f9974db69a7298d675c9e2101a01b5dcd4e

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -26,6 +26,9 @@ com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException= DB operati
 com.wavemaker.runtime.data$DBOperationFailedException_id=1008
 com.wavemaker.runtime.data$DBOperationFailedException=DB operation failed because of the error "{0}",please check server logs for more information
 
+com.wavemaker.runtime.data$CommunicationException_id=1009
+com.wavemaker.runtime.data$CommunicationException=Communication Exception - Failed to connect server.
+
 # com.wavemaker.runtime.server (2000-2999)
 com.wavemaker.runtime.server$MethodNotFound_id=2000
 com.wavemaker.runtime.server$MethodNotFound=Method "{0}" ("{1}" args) not found in service "{2}"
