Fixed issues with respect to theme deleteion
Change-Id: Ia05b9bda0c93a9528e70d8c76c7bdeff1d08c5c9

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -469,6 +469,10 @@ com.wavemaker.studio$PrefabPropertyMissingInConfigFile=Property "{0}" missing in
 com.wavemaker.studio$ConfigurationException_id=10012
 com.wavemaker.studio$ConfigurationException=Configuration Exception,Please check logs.
 
+
+com.wavemaker.studio$ThemeAssociated_id=10013
+com.wavemaker.studio$ThemeAssociated=Theme "{0}" is active in project(s)"
+
 # com.wavemaker.json (11000-11999)
 com.wavemaker.json$FailedParsing_id=11000
 com.wavemaker.json$FailedParsing=Failed parsing JSON string "{0}"
