Providing valid message resource when published datamodel does not exist.
Change-Id: I5c9953280be094ece8e83bf7b0faea513cf07105

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -408,6 +408,9 @@ com.wavemaker.tools.data$InvalidPackageName=Package name is not valid: "{0}".
 com.wavemaker.tools.data$TypeNotCreated_id=8012
 com.wavemaker.tools.data$TypeNotCreated=Type not created.
 
+com.wavemaker.tools.data$PublishedDataModelDNE_id=8013
+com.wavemaker.tools.data$PublishedDataModelDNE=Published data model resource does not exist "{0}".
+
 
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
