--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -318,6 +318,9 @@ com.wavemaker.tools$ProjectNameContainsSpecialCharacter=Special Characters are n
 com.wavemaker.tools$FailedToDeletePrefab_id=5040
 com.wavemaker.tools$FailedToDeletePrefab=Failed to delete prefab "{0}"
 
+com.wavemaker.tools$ProjectDirDoesNotExist_id=5041
+com.wavemaker.tools$ProjectDirDoesNotExist=Project Directory does not exist : "{0}"
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
@@ -710,6 +713,10 @@ com.wavemaker.deployment$IdDoesNotExist= Deployment Info with Deployment Id "{0}
 
 com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull_id=12003
 com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Could not be Null or Empty
+
+#com.wavemaker.vcs (13000-13999)
+com.wavemaker.vcs$InvalidVcsType_id=13000
+com.wavemaker.vcs$InvalidVcsType=Invalid Vcs Type : {0}
 
 
 
