Renamed UserService to UserManager and refactored,cleaned up ProjectManager class and Project class cleaned up all the file service related methods in Project and moved the references to ProjectResource
Change-Id: Ifbd4df146332fd7ff948611a3f60fc3518b2d457

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -214,7 +214,7 @@ com.wavemaker.platform$ProjectDNE_id=5004
 com.wavemaker.platform$ProjectDNE=The project {0} does not exist (location {1})
 
 com.wavemaker.platform$ProjectConflict_id=5005
-com.wavemaker.platform$ProjectConflict=The project {0} cannot be created; conflicts with existing project or demo
+com.wavemaker.platform$ProjectConflict=The project {0} cannot be created; conflicts with existing project
 
 com.wavemaker.platform$ProjectInvalidName_id=5006
 com.wavemaker.platform$ProjectInvalidName=The project "{0}" has an invalid name; projects cannot start with '.'
