Messages for merge conflict during push.
Change-Id: I703cb4ff99c8bd85a9e677535f855412b77f146d

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -718,6 +718,8 @@ com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Co
 com.wavemaker.vcs$InvalidVcsType_id=13000
 com.wavemaker.vcs$InvalidVcsType=Invalid Vcs Type : {0}
 
+com.wavemaker.vcs$MergeConflictDuringPush_id=13001
+com.wavemaker.vcs$MergeConflictDuringPush=Merge Conflict occurred during push. Resolve merge conflicts to push successfully.
 
 
 
