Messages for Invalid Credentials.
Change-Id: I1602decbdcc9f447a23ce8439c4aaf82462f910d

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -721,6 +721,12 @@ com.wavemaker.vcs$InvalidVcsType=Invalid Vcs Type : {0}
 com.wavemaker.vcs$MergeConflictDuringPush_id=13001
 com.wavemaker.vcs$MergeConflictDuringPush=Merge Conflict occurred during push. Resolve merge conflicts to push successfully.
 
+com.wavemaker.vcs$IncorrectCredential_id=13002
+com.wavemaker.vcs$IncorrectCredential=Incorrect Credential. Please enter correct credentials and try again.
+
+com.wavemaker.vcs$IncorrectDetail_id=13003
+com.wavemaker.vcs$IncorrectDetail=URL or login credential is incorrect. Please enter correct details and try again.
+
 
 
 
