0# Changing Error Messages
Change-Id: Ie57956178278cda91d878a09dd0c78a1fb586708

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -727,6 +727,18 @@ com.wavemaker.vcs$IncorrectCredential=Incorrect Credential. Please enter correct
 com.wavemaker.vcs$IncorrectDetail_id=13003
 com.wavemaker.vcs$IncorrectDetail=URL or login credential is incorrect. Please enter correct details and try again.
 
+com.wavemaker.vcs$InvalidProject_id=13004
+com.wavemaker.vcs$InvalidProject=Not a valid WaveMaker Project
+
+com.wavemaker.vcs$InvalidUrl_id=13005
+com.wavemaker.vcs$InvalidUrl=Invalid URL
+
+com.wavemaker.vcs$ProjectExists_id=13006
+com.wavemaker.vcs$ProjectExists=Project already exists in VCS
+
+com.wavemaker.vcs$MergeConflictDuringPull_id=13007
+com.wavemaker.vcs$MergeConflictDuringPull=Resolve conflicts before pull
+
 
 
 
