Cleaned up unused classes related to old db model
Change-Id: Id8d48c33fe08215b2adba1eb3fbc5b22b98c72f2

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -199,7 +199,7 @@ com.wavemaker.runtime.ws$FailedToParseResponse=Failed to parse {0} response.
 # com.wavemaker.platform (5000-5999)
 com.wavemaker.platform$SysPropertyNotSet_id=5000
 com.wavemaker.platform$SysPropertyNotSet=The following property(ies) must be set: {0}
-com.wavemaker.platform$SysPropertyNotSet_detail=The following system property(ies) must be set: {0}.  Set these properties using -D<propname>=<provalue>.  For example: java -Dp1=v1 -Dp2=v2 com.wavemaker.platform.data.ImportDB
+com.wavemaker.platform$SysPropertyNotSet_detail=The following system property(ies) must be set: {0}.  Set these properties using -D<propname>=<provalue>.
 
 com.wavemaker.platform$PropertyMustBeDir_id=5001
 com.wavemaker.platform$PropertyMustBeDir=The property {0} must point to a directory, not a file: {1}
