Refactoring of error messages. Moved them to Message resources. Changes Done in Impordb, exportDb, DataModelBuilder, AbstractDataModelSetup, DMDM
Change-Id: Ie976d6c527f740f1308b2f9d2382cb3bdb8dbaa9

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -64,7 +64,7 @@ com.wavemaker.runtime.server$NonHomogeneousReturn_id=2010
 com.wavemaker.runtime.server$NonHomogeneousReturn=The return from service {0}, method {1} was a non-homogeneous array or Collection; only homogeneous Collections can be sent to the client.
 
 com.wavemaker.runtime.server$NonArraySequenceConversion_id=2011
-com.wavemaker.runtime.server$NonArraySequenceConversion=Can''t convert an array "{0}" into an instance of type "{1}" 
+com.wavemaker.runtime.server$NonArraySequenceConversion=Can''t convert an array "{0}" into an instance of type "{1}"
 
 com.wavemaker.runtime.server$JSONParamTypeNoGenerics_id=2012
 com.wavemaker.runtime.server$JSONParamTypeNoGenerics=Types using generics are not allowed in JSONParameterTypeField; parameter {0} of method {1}
@@ -414,6 +414,181 @@ com.wavemaker.platform.data$TypeNotCreated=Type not created.
 com.wavemaker.platform.data$PublishedDataModelDNE_id=8013
 com.wavemaker.platform.data$PublishedDataModelDNE=Published data model resource does not exist "{0}".
 
+com.wavemaker.platform.data$NoDataModelChanges_id=8014
+com.wavemaker.platform.data$NoDataModelChanges=No changes in the data model, Hence save is not possible.
+
+com.wavemaker.platform.data$FailureInPreparingConUrl_id=8015
+com.wavemaker.platform.data$FailureInPreparingConUrl=Failed to prepare connection url.
+
+com.wavemaker.platform.data$InvalidConnectionProperties_id=8016
+com.wavemaker.platform.data$InvalidConnectionProperties=Data Model connection properties are invalid, Please check connection properties.
+
+com.wavemaker.platform.data$DataModelRevertFailure_id=8017
+com.wavemaker.platform.data$DataModelRevertFailure=Exception while reverting draft datamodel to file.
+
+com.wavemaker.platform.data$DataModelRevertNotPossible_id=8018
+com.wavemaker.platform.data$DataModelRevertNotPossible=Revert is not possible as there is no published data model till now, So please do save and apply to get published data Model.
+
+com.wavemaker.platform.data$QueryGenFailure_id=8019
+com.wavemaker.platform.data$QueryGenFailure=Error while generating queries
+
+com.wavemaker.platform.data$FailureInQueryBuilder_id=8020
+com.wavemaker.platform.data$FailureInQueryBuilder=Failed to create query builder
+
+com.wavemaker.platform.data$DataModelFileDoesNotExist_id=8021
+com.wavemaker.platform.data$DataModelFileDoesNotExist=Data base Model file does not exist in the project "{0}".
+
+com.wavemaker.platform.data$FailureDataModelDraftDel_id=8022
+com.wavemaker.platform.data$FailureDataModelDraftDel=Failed to delete draft datamodelfile
+
+com.wavemaker.platform.data$FailureInFetchingPublishedDM_id=8023
+com.wavemaker.platform.data$FailureInFetchingPublishedDM=Failed to get published dataModel file
+
+com.wavemaker.platform.data$FailureInFetchingDraftDM_id=8024
+com.wavemaker.platform.data$FailureInFetchingDraftDM=Failed to get draft dataModel file
+
+com.wavemaker.platform.data$FailureInFetchingQueryFile_id=8025
+com.wavemaker.platform.data$FailureInFetchingQueryFile=Failed to get query model file
+
+com.wavemaker.platform.data$FailureInDatabaseMigration_id=8026
+com.wavemaker.platform.data$FailureInDatabaseMigration=Failed to migrate database
+
+com.wavemaker.platform.data$FailureInSavingDraftDM_id=8027
+com.wavemaker.platform.data$FailureInSavingDraftDM=Exception while saving draft datamodel to file
+
+com.wavemaker.platform.data$FailureInSavingQueryModel_id=8028
+com.wavemaker.platform.data$FailureInSavingQueryModel=Exception while saving queryModel to file
+
+com.wavemaker.platform.data$FailureInSavingPublishedDM_id=8029
+com.wavemaker.platform.data$FailureInSavingPublishedDM=Exception while saving published data model to file
+
+com.wavemaker.platform.data$DMAlreadyExists_id=8030
+com.wavemaker.platform.data$DMAlreadyExists=DataModel already exists.
+
+com.wavemaker.platform.data$DMImportFailure_id=8031
+com.wavemaker.platform.data$DMImportFailure=Failed to import database.
+
+com.wavemaker.platform.data$DMNotExists_id=8032
+com.wavemaker.platform.data$DMNotExists=Data model does not exist with the name "{0}" , hence reimport is not possible
+
+com.wavemaker.platform.data$FailedToReimport_id=8033
+com.wavemaker.platform.data$FailedToReimport=Failed to reimport database.
+
+com.wavemaker.platform.data$FailedToEstablishCon_id=8034
+com.wavemaker.platform.data$FailedToEstablishCon=Failed to establish database connection.
+
+com.wavemaker.platform.data$FailedToExeScript_id=8035
+com.wavemaker.platform.data$FailedToExeScript=Failed to execute script.
+
+com.wavemaker.platform.data$FailureInDataModelExport_id=8036
+com.wavemaker.platform.data$FailureInDataModelExport=Failed to Export data model "{0}".
+
+com.wavemaker.platform.data$FailedToGetDDL_id=8037
+com.wavemaker.platform.data$FailedToGetDDL=Failed to get ddl in exporting data model.
+
+com.wavemaker.platform.data$FailureInReadingConProps_id=8038
+com.wavemaker.platform.data$FailureInReadingConProps=Failed to read connection properties from property file.
+
+com.wavemaker.platform.data$FailedToWriteConProps_id=8039
+com.wavemaker.platform.data$FailedToWriteConProps=Failed to write connection properties in property file.
+
+com.wavemaker.platform.data$ServiceIdBlank_id=8040
+com.wavemaker.platform.data$ServiceIdBlank=Service Id can not be null or empty.
+
+com.wavemaker.platform.data$SrcFldNotFound_id=8041
+com.wavemaker.platform.data$SrcFldNotFound=Java source dir should not be null.
+
+com.wavemaker.platform.data$SpecifyRevengFile_id=8042
+com.wavemaker.platform.data$SpecifyRevengFile=Please specify a package name in your reveng file.
+
+com.wavemaker.platform.data$TableDoesNotExit_id=8043
+com.wavemaker.platform.data$TableDoesNotExit=Table does not exist with the name "{0}".
+
+com.wavemaker.platform.data$TableCanbeDel_id=8044
+com.wavemaker.platform.data$TableCanbeDel=Table with name "{0}" can not be deleted,as it has relation(s)
+
+com.wavemaker.platform.data$TableAlreadyExists_id=8045
+com.wavemaker.platform.data$TableAlreadyExists=Table already exist with name"{0}".
+
+com.wavemaker.platform.data$ColAlreadyExists_id=8046
+com.wavemaker.platform.data$ColAlreadyExists=Column is already exist in the Table "{0}".
+
+com.wavemaker.platform.data$ForeingKeyNotPossible_id=8047
+com.wavemaker.platform.data$ForeingKeyNotPossible=Foreign key is not possible while creating a column.
+
+com.wavemaker.platform.data$PkColCannbeDel_id=8048
+com.wavemaker.platform.data$PkColCannbeDel=PK column deletion is  not allowed.
+
+com.wavemaker.platform.data$DelRelToDelColumn_id=8049
+com.wavemaker.platform.data$DelRelToDelColumn=This column has a relation,So first delete relation and then delete column.
+
+com.wavemaker.platform.data$SqlMismatch_id=8050
+com.wavemaker.platform.data$SqlMismatch=SQLTypes does not match with the relations of this column.
+
+com.wavemaker.platform.data$UserCanntMarkForeignKey_id=8051
+com.wavemaker.platform.data$UserCanntMarkForeignKey=User cant mark/unmark column as foreign key.
+
+com.wavemaker.platform.data$PkWithRelExists_id=8052
+com.wavemaker.platform.data$PkWithRelExists=Not possible add new PK column , as Pk columns already have a relation.Delete relation and create it again.
+
+com.wavemaker.platform.data$PKHasAlreadyRelation_id=8053
+com.wavemaker.platform.data$PKHasAlreadyRelation=Primary key column has already relationship,so you cant add Pk column to this table,Delete relation and try again.
+
+com.wavemaker.platform.data$PrimaryRelCanntbeDel_id=8054
+com.wavemaker.platform.data$PrimaryRelCanntbeDel=Relation cant be deleted as it is not primary relation.
+
+com.wavemaker.platform.data$TargetRelNotFound_id=8055
+com.wavemaker.platform.data$TargetRelNotFound=Could not find target relation.
+
+com.wavemaker.platform.data$NonPrimaryRelCanntBeUpdated_id=8056
+com.wavemaker.platform.data$NonPrimaryRelCanntBeUpdated=Relation can not be updated as it is not primary relation.
+
+com.wavemaker.platform.data$FailedToUpdateRel_id=8057
+com.wavemaker.platform.data$FailedToUpdateRel=Failed to update this relation,Please check this relation properties are updatable.
+
+com.wavemaker.platform.data$RelationAlreadyExists_id=8058
+com.wavemaker.platform.data$RelationAlreadyExists=Relation already exist with name "{0}" in table "{1}".
+
+com.wavemaker.platform.data$RelatedTypeDoesNtExist_id=8059
+com.wavemaker.platform.data$RelatedTypeDoesNtExist=Related type table does not exist "{0}".
+
+com.wavemaker.platform.data$AtleastOneRelColExists_id=8060
+com.wavemaker.platform.data$AtleastOneRelColExists=At least one related column should exist in "{0}".
+
+com.wavemaker.platform.data$RelatedColAlreadyFk_id=8061
+com.wavemaker.platform.data$RelatedColAlreadyFk=Related column is already FK "{0}".
+
+com.wavemaker.platform.data$RelationWithComkeyNotpossible_id=8062
+com.wavemaker.platform.data$RelationWithComkeyNotpossible=Relation with composite key is not possible "{0}".
+
+com.wavemaker.platform.data$RelatedColsMismatchSize_id=8063
+com.wavemaker.platform.data$RelatedColsMismatchSize=Related columns size should be of same number of Pk columns in the target table.
+
+com.wavemaker.platform.data$RelatedcolHasForeingkey_id=8064
+com.wavemaker.platform.data$RelatedcolHasForeingkey=Related columns is already having Foreign key relation.
+
+
+com.wavemaker.platform.data$PkColsCntNotMatched_id=8065
+com.wavemaker.platform.data$PkColsCntNotMatched=No of Pk columns is target is not same as source table.
+
+com.wavemaker.platform.data$RelColsCntMismatch_id=8066
+com.wavemaker.platform.data$RelColsCntMismatch=No of related column size is not same as FK columns size .
+
+com.wavemaker.platform.data$OneToZeroRelNotPossibe_id=8067
+com.wavemaker.platform.data$OneToZeroRelNotPossibe=OneToZeroOrOne relation is not possible for notnull true column "{0}".
+
+com.wavemaker.platform.data$PkColBlobNotSupported_id=8068
+com.wavemaker.platform.data$PkColBlobNotSupported=Primary Key column with CLOB/BLOB type is not supported.
+
+com.wavemaker.platform.data$PkColLengGrtZero_id=8069
+com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data type length should not be NULL or 0.
+
+com.wavemaker.platform.data$PkColLengtLessTwoFiveFive_id=8070
+com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
+
+com.wavemaker.platform.data$ColLenGrtZero_id=8071
+com.wavemaker.platform.data$ColLenGrtZero="{0}" column with "{1}" data type length should not be NULL or 0.
+
 
 # com.wavemaker.platform.deployment (9000-9500)
 com.wavemaker.platform.deployment$UnknownDeploymentTarget_id=9000
@@ -555,7 +730,7 @@ com.wavemaker.json$NoGetterInType_id=11029
 com.wavemaker.json$NoGetterInType=No getter for attribute "{0}" from object "{1}" ("{2}"); skipping
 
 com.wavemaker.json$ErrorGettingProperty_id=11030
-com.wavemaker.json$ErrorGettingProperty=Error getting property "{0}" from object "{1}" ("{2}") 
+com.wavemaker.json$ErrorGettingProperty=Error getting property "{0}" from object "{1}" ("{2}")
 
 com.wavemaker.json$UnexpectedHandleType_id=11031
 com.wavemaker.json$UnexpectedHandleType=Unexpected handle type: "{0}"
