--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -911,11 +911,8 @@ com.wavemaker.vcs$ProjectExists=Project already exists in VCS
 com.wavemaker.vcs$MergeConflictDuringPull_id=13007
 com.wavemaker.vcs$MergeConflictDuringPull=Resolve conflicts before pull
 
-
-
-
-
-
+com.wavemaker.vcs$InvalidRemote_id=13008
+com.wavemaker.vcs$InvalidRemote=Invalid Target URL for VCS. Please correct the remote URL and try again.
 
 
 
