WMS895# vcs authentication validation
Change-Id: Iefef8f90da6c67fa2283c22735a6b36ebd51d50a

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -914,6 +914,9 @@ com.wavemaker.vcs$MergeConflictDuringPull=Resolve conflicts before pull
 com.wavemaker.vcs$InvalidRemote_id=13008
 com.wavemaker.vcs$InvalidRemote=Invalid Target URL for VCS. Please correct the remote URL and try again.
 
+com.wavemaker.vcs$InvalidLogin_id=13009
+com.wavemaker.vcs$InvalidLogin=Invalid Login Credentials
+
 
 
 
