--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -914,69 +914,8 @@ com.wavemaker.vcs$MergeConflictDuringPull=Resolve conflicts before pull
 com.wavemaker.vcs$InvalidRemote_id=13008
 com.wavemaker.vcs$InvalidRemote=Invalid Target URL for VCS. Please correct the remote URL and try again.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# frankie likes starbucks a lot
+com.wavemaker.saas.unexpectedEDNResponse_id=13009
+com.wavemaker.saas.unexpectedEDNResponse=Unexpected response from EDN,Response Code:{0},msg:{1}
+
+com.wavemaker.platform.unAuthorizedToEDN_id=13010
+com.wavemaker.platform.unAuthorizedToEDN=Unauthorized to EDN
