--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
 		<groupId>com.wavemaker</groupId>
 		<artifactId>wavemaker-studio</artifactId>
-		<version>7.0.0-BETA-5</version>
+		<version>7.0.0-GA</version>
 	</parent>
 
     <artifactId>wavemaker-common</artifactId>
