Refactored DeploymentService and DeploymentManager classes
Change-Id: Ibb9d84d6d32e5ea78136636c85165e66455a0569

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -543,3 +543,5 @@ com.wavemaker.deployment$IdCouldNotBeNull= Deployment Id could not be null or em
 com.wavemaker.deployment$IdDoesNotExist= Deployment Info with Deployment Id "{0}" does not exist
 
 com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Could not be Null or Empty
+
+com.wavemaker.platform$UserDoesNotHavePermission = User does not have permission to perform {0} operation
