Compressing page resources into a single file.
Change-Id: Id7384afc0f8bbb21f6007277cb05a216bb7b0230

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -134,6 +134,8 @@ com.wavemaker.platform$Pages_Copy_SourcePageDNE=Page "{0}" in project "{1}" does
 
 com.wavemaker.platform$Pages_Copy_TargetExists=Page "{0}" already exists in project "{1}"
 
+com.wavemaker.platform$Page_Resource_not_exist=Page resource "{0}" does not exist
+
 com.wavemaker.platform$ProjectNewerThanStudio=Can''t open project "{0}" because it is newer than the studio (project version "{1}", studio project version "{2}")
 
 com.wavemaker.platform$NoDataServiceMgrBeanFound=Common backup directory already exists  "{0}"
