--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -136,6 +136,8 @@ com.wavemaker.platform$Pages_Copy_TargetExists=Page "{0}" already exists in proj
 
 com.wavemaker.platform$Page_Resource_not_exist=Page resource "{0}" does not exist
 
+com.wavemaker.platform$page_resource_update_not_supported=Page resource "{0}" update not supported
+
 com.wavemaker.platform$ProjectNewerThanStudio=Can''t open project "{0}" because it is newer than the studio (project version "{1}", studio project version "{2}")
 
 com.wavemaker.platform$NoDataServiceMgrBeanFound=Common backup directory already exists  "{0}"
