Fixed below issues 1) Generating compressed file while project is registered. 2) Generating compressed file for pages when project is pulled from VCS. 3) Generating compressed file for prefab pages when project is registered or pulled from VCS. 4) Add migration script to generate compressed file for studio prefab pages.
Change-Id: I9b0b306dd7e5e551e08a2727b43ea7bf0218564e

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -138,6 +138,8 @@ com.wavemaker.platform$Page_Resource_not_exist=Page resource "{0}" does not exis
 
 com.wavemaker.platform$page_resource_update_not_supported=Page resource "{0}" update not supported
 
+com.wavemaker.platform$page_compressed_file_corrupted=Page "{0}" compressed file "{1}" is corrupted
+
 com.wavemaker.platform$ProjectNewerThanStudio=Can''t open project "{0}" because it is newer than the studio (project version "{1}", studio project version "{2}")
 
 com.wavemaker.platform$NoDataServiceMgrBeanFound=Common backup directory already exists  "{0}"
