WMS#1577 resolved hql query class cast exception
Change-Id: Ia981f5351882cf873afca7910e554bd846721e27

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -6,6 +6,10 @@ com.wavemaker.runtime.data$QueryDoesntTakeParams=The named query "{0}" does not 
 
 com.wavemaker.runtime.data$QueryRequiresParams=The named query "{0}" requires the following parameters: "{1}"
 
+com.wavemaker.runtime.data$QueryConvFailure=Failed to convert parameter in query
+
+com.wavemaker.runtime.data$ClassNotFound=Failed to load the class "{0}"
+
 com.wavemaker.runtime.data$DBConnectionException=Database Exception - Failed to connect to Database
 
 com.wavemaker.runtime.data$DBCommitException=Database Exception - Commit failed. Check whether DB is up
