Added delete project failed message resource
Change-Id: I42d26f06a3c9814b789bc5f5f7552556ad2e70c7

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -156,6 +156,8 @@ com.wavemaker.platform$TemplateAlreadyExist=Template already exist with name "{0
 
 com.wavemaker.platform$SaveAsNotPossible=Save as not possible from "{0}" to "{1}"
 
+com.wavemaker.platform$FailedToDeleteProject=Failed to delete project "{0}","{1}"
+
 com.wavemaker.platform$FailedToDeleteTemplate=Failed to delete template "{0}"
 
 com.wavemaker.platform$InvalidTemplate=Given file is not a valid template "{0}"
