Modified groupId of all modules to com.wavemaker.studio
Change-Id: I00548fdaeaeb6def21fd974e6ba48374f92cbea5

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-		<groupId>com.wavemaker</groupId>
+		<groupId>com.wavemaker.studio</groupId>
 		<artifactId>wavemaker-studio</artifactId>
 		<version>7.0.1</version>
 	</parent>
