Fixed Stream closing issue, some possible NPEs and removed Unreachable statements platform module.
Change-Id: Ifc3f1d8f68b70907b2ebae7ba4f3e5f00153cf7f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -190,6 +190,10 @@ com.wavemaker.platform$FailedToDeletePrefab=Failed to delete prefab "{0}"
 
 com.wavemaker.platform$ProjectDirDoesNotExist=Project Directory does not exist : "{0}"
 
+com.wavemaker.platform.FailedToCreateDir=Failed to create directory "{0}"
+
+com.wavemaker.platform.FailedToCreateFile=Failed to create file at location "{0}"
+
 com.wavemaker.platform$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
 
 com.wavemaker.platform$InvalidServiceNoId=Service definition for service "{0}" is invalid
