Renamed the package com.wavemaker.json to com.wavemaker.studio.json
Change-Id: I32e45fc504a7f06a9e5faf9484e57c237066e131

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -398,83 +398,83 @@ com.wavemaker.studio$ConfigurationException=Configuration Exception,Please check
 
 com.wavemaker.studio$ThemeAssociated=Theme "{0}" is active in project(s)"
 
-com.wavemaker.json$FailedParsing=Failed parsing JSON string "{0}"
+com.wavemaker.studio.json$FailedParsing=Failed parsing JSON string "{0}"
 
-com.wavemaker.json$Type_UnknownRawType=Unknown raw type "{0}" ("{1}")
+com.wavemaker.studio.json$Type_UnknownRawType=Unknown raw type "{0}" ("{1}")
 
-com.wavemaker.json$Type_UnknownParameterType=Unknown parameter type "{0}" ({1})
+com.wavemaker.studio.json$Type_UnknownParameterType=Unknown parameter type "{0}" ({1})
 
-com.wavemaker.json$Type_NoGenerics=Type requires generic information, but none provided for class "{0}"
+com.wavemaker.studio.json$Type_NoGenerics=Type requires generic information, but none provided for class "{0}"
 
-com.wavemaker.json$FailedGenericArrayType=Couldn''t determine information for GenericArrayType "{0}" (component "{1}")
+com.wavemaker.studio.json$FailedGenericArrayType=Couldn''t determine information for GenericArrayType "{0}" (component "{1}")
 
-com.wavemaker.json$FailedInstantiationMap=Failed to instantiate Map of class "{0}"
+com.wavemaker.studio.json$FailedInstantiationMap=Failed to instantiate Map of class "{0}"
 
-com.wavemaker.json$JSONObjectRequiredForMap=JSONObject required for conversion to Map, got "{0}" (class "{1}")
+com.wavemaker.studio.json$JSONObjectRequiredForMap=JSONObject required for conversion to Map, got "{0}" (class "{1}")
 
-com.wavemaker.json$TypeDefRequired=TypeDefinition required
+com.wavemaker.studio.json$TypeDefRequired=TypeDefinition required
 
-com.wavemaker.json$ObjectTypeDefRequired=Instance of ObjectTypeDefinition required, got "{0}" (class "{1}")
+com.wavemaker.studio.json$ObjectTypeDefRequired=Instance of ObjectTypeDefinition required, got "{0}" (class "{1}")
 
-com.wavemaker.json$FailedInstantiationCollection=Failed to instantiate Collection of class "{0}"
+com.wavemaker.studio.json$FailedInstantiationCollection=Failed to instantiate Collection of class "{0}"
 
-com.wavemaker.json$UnknownCollectionType=Unknown Collection or Array type: "{0}"
+com.wavemaker.studio.json$UnknownCollectionType=Unknown Collection or Array type: "{0}"
 
-com.wavemaker.json$UnknownCollInSet=Unknown Collection or Array type: "{0}" (class "{1}")
+com.wavemaker.studio.json$UnknownCollInSet=Unknown Collection or Array type: "{0}" (class "{1}")
 
-com.wavemaker.json$UnhandledType=Unhandled type: "{0}" ("{1}")
+com.wavemaker.studio.json$UnhandledType=Unhandled type: "{0}" ("{1}")
 
-com.wavemaker.json$PrimitiveNewInstanceRequiresArg=newInstance() for Primitive requires 1 argument, not "{0}"
+com.wavemaker.studio.json$PrimitiveNewInstanceRequiresArg=newInstance() for Primitive requires 1 argument, not "{0}"
 
-com.wavemaker.json$UnknownNumberType=Unknown primitive number "{0}" for value "{1}"
+com.wavemaker.studio.json$UnknownNumberType=Unknown primitive number "{0}" for value "{1}"
 
-com.wavemaker.json$FailedToConvert=Failed to convert "{0}" to type "{1}"
+com.wavemaker.studio.json$FailedToConvert=Failed to convert "{0}" to type "{1}"
 
-com.wavemaker.json$UnknownObjectType=Unknown type of object "{0}" ({1}); attempted translation to "{2}"
+com.wavemaker.studio.json$UnknownObjectType=Unknown type of object "{0}" ({1}); attempted translation to "{2}"
 
-com.wavemaker.json$NoPropertyMatchKey=No property matches key "{0}" in type "{1}"
+com.wavemaker.studio.json$NoPropertyMatchKey=No property matches key "{0}" in type "{1}"
 
-com.wavemaker.json$NoWriteMethod=Object "{0}" has no write method for property "{1}"; skipping
+com.wavemaker.studio.json$NoWriteMethod=Object "{0}" has no write method for property "{1}"; skipping
 
-com.wavemaker.json$UnknownPrimitiveType=Unknown primitive type "{0}" ({1})
+com.wavemaker.studio.json$UnknownPrimitiveType=Unknown primitive type "{0}" ({1})
 
-com.wavemaker.json$RawTypeNotClass=Raw type was not a class: "{0}"
+com.wavemaker.studio.json$RawTypeNotClass=Raw type was not a class: "{0}"
 
-com.wavemaker.json$ExpectedCollection=Expected a Collection, was: "{0}"
+com.wavemaker.studio.json$ExpectedCollection=Expected a Collection, was: "{0}"
 
-com.wavemaker.json$UnknownType=Unknown type "{0}"
+com.wavemaker.studio.json$UnknownType=Unknown type "{0}"
 
-com.wavemaker.json$UseFieldForArray=Use getFieldDefinition() for list/array types; class: "{0}"
+com.wavemaker.studio.json$UseFieldForArray=Use getFieldDefinition() for list/array types; class: "{0}"
 
-com.wavemaker.json$NoGetterInType=No getter for attribute "{0}" from object "{1}" ("{2}"); skipping
+com.wavemaker.studio.json$NoGetterInType=No getter for attribute "{0}" from object "{1}" ("{2}"); skipping
 
-com.wavemaker.json$ErrorGettingProperty=Error getting property "{0}" from object "{1}" ("{2}")
+com.wavemaker.studio.json$ErrorGettingProperty=Error getting property "{0}" from object "{1}" ("{2}")
 
-com.wavemaker.json$UnexpectedHandleType=Unexpected handle type: "{0}"
+com.wavemaker.studio.json$UnexpectedHandleType=Unexpected handle type: "{0}"
 
-com.wavemaker.json$CycleFound=Cycle found in object "{0}"; using handler "{1}"
+com.wavemaker.studio.json$CycleFound=Cycle found in object "{0}"; using handler "{1}"
 
-com.wavemaker.json$UnknownCycleHandler=Unknown cycle handler: "{0}"
+com.wavemaker.studio.json$UnknownCycleHandler=Unknown cycle handler: "{0}"
 
-com.wavemaker.json$MissingFieldValue=Missing Field value for the parameter "{0}"
+com.wavemaker.studio.json$MissingFieldValue=Missing Field value for the parameter "{0}"
 
-com.wavemaker.json$InvalidFieldValue=Invalid Field value for the parameter "{0}",{1}
+com.wavemaker.studio.json$InvalidFieldValue=Invalid Field value for the parameter "{0}",{1}
 
-com.wavemaker.json$InvalidObject=Invalid Object "{0}",{1}
+com.wavemaker.studio.json$InvalidObject=Invalid Object "{0}",{1}
 
-com.wavemaker.json$UnrecognizedField=Unrecognized field "{0}"
+com.wavemaker.studio.json$UnrecognizedField=Unrecognized field "{0}"
 
-com.wavemaker.json$InvalidJsonObject=Incorrect Json Object
+com.wavemaker.studio.json$InvalidJsonObject=Incorrect Json Object
 
-com.wavemaker.json$MessageNotReadable=Message not readable
+com.wavemaker.studio.json$MessageNotReadable=Message not readable
 
-com.wavemaker.json$UnexpectedError=Unexpected error "{0}",please check server logs for more information
+com.wavemaker.studio.json$UnexpectedError=Unexpected error "{0}",please check server logs for more information
 
-com.wavemaker.json$onlyZipFilesAllowedForPrefabs=Only .zip files are accepted as prefabs
+com.wavemaker.studio.json$onlyZipFilesAllowedForPrefabs=Only .zip files are accepted as prefabs
 
-com.wavemaker.json$alreadyPrefabExists=Already a prefab exists with name '{0}'
+com.wavemaker.studio.json$alreadyPrefabExists=Already a prefab exists with name '{0}'
 
-com.wavemaker.json$prefabdoesNotExist=Prefab '{0}' does not exist in the studio
+com.wavemaker.studio.json$prefabdoesNotExist=Prefab '{0}' does not exist in the studio
 
 com.wavemaker.usernameAlreadyExists=There is already an account registered with the given username: "{0}"
 
